--- a/practice_1/index.html
+++ b/practice_1/index.html
@@ -26,6 +26,9 @@
         <div class="d-flex mb-2">
             <button class="btn btn-success flex-grow-1 mx-2" id="plus">+</button>
             <button class="btn btn-danger flex-grow-1 mx-2" id="minus">-</button>
+            <button class="btn btn-divide flex-grow-1 mx-2" id="division">/</button>
+            <button class="btn btn-multiply flex-grow-1 mx-2" id="multiplication">*</button>
+            <button class="btn btn-multiply flex-grow-1 mx-2" id="pow">^</button>
         </div>
         <button class="btn btn-outline-info w-100 mb-2" id="submit">
             Сalculate
