--- a/practice_1/index.html
+++ b/practice_1/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My project</title>
     <script src="/app.js" defer></script>
+    <script src="/theory.js" defer></script>
 </head>
 <body class="bg-dark text-light">
     <div class="container w-50 pr-5">
