--- a/practice_2/index.html
+++ b/practice_2/index.html
@@ -12,20 +12,20 @@
         <input 
           type="text"
           placeholder="Enter the title"
-          id="title"
+          id="titleNote"
         />
-        <button id="create">
+        <button id="adding">
             Add
         </button>
 
         <ul id="list">
-            <li>
+            <!-- <li>
                 <span>Title</span>
                 <span>
                     <span>&check;</span>
                     <span>&times;</span>
                 </span>
-            </li>
+            </li> -->
         </ul>
     </div>
 </body>
