--- a/practice_2/index.html
+++ b/practice_2/index.html
@@ -3,22 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" 
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+        crossorigin="anonymous">
     <title>Array and Objects</title>
     <script src="/app.js" defer></script>
 </head>
-<body>
-    <div>
+<body class="bg-dark text-light">
+    <div class="container w-50 pt-5">
         <h1>Notes</h1>
         <input 
           type="text"
+          class="form-control mb-2"
           placeholder="Enter the title"
           id="titleNote"
         />
-        <button id="adding">
+        <button class="btn btn-outline-info w-100 mb-2" id="adding">
             Add
         </button>
 
-        <ul id="list">
+        <ul class="list-group list-group-flush" id="list">
             <!-- <li>
                 <span>Title</span>
                 <span>
