--- a/practice_2/index.html
+++ b/practice_2/index.html
@@ -9,6 +9,7 @@
         crossorigin="anonymous">
     <title>Array and Objects</title>
     <script src="/app.js" defer></script>
+    <script src="/array.js" defer></script>
 </head>
 <body class="bg-dark text-light">
     <div class="container w-50 pt-5">
