--- a/practice_3/index.html
+++ b/practice_3/index.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous"
     >
     <title>JavaScript</title>
-    <script src="/numbers.js" defer></script>
+    <script src="/app.js" defer></script>
 </head>
 <body class="bg-dark text-light">
     <div class="container w-50 pt-5">
