--- a/practice_1/index.html
+++ b/practice_1/index.html
@@ -3,41 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My project</title>
-    <script src="/app.js" defer></script>
-    <script src="/theory.js" defer></script>
+    <title>Pr3</title>
 </head>
-<body class="bg-dark text-light">
-    <div class="container w-50 pr-5">
+<body>
+    <div>
         <h1>Calculator</h1>
         <input 
             type="number"
-            class="form-control mb-2"
             placeholder="Enter 1 number"
             id="input1"
             value="10"
         />
         <input 
             type="number"
-            class="form-control mb-2"
             placeholder="Enter 2 number"
             id="input2"
             value="5"
         />
-        <div class="d-flex mb-2">
-            <button class="btn btn-success flex-grow-1 mx-2" id="plus">+</button>
-            <button class="btn btn-danger flex-grow-1 mx-2" id="minus">-</button>
-            <button class="btn btn-divide flex-grow-1 mx-2" id="division">/</button>
-            <button class="btn btn-multiply flex-grow-1 mx-2" id="multiplication">*</button>
-            <button class="btn btn-multiply flex-grow-1 mx-2" id="pow">^</button>
+        <div>
+            <button id="plus">+</button>
+            <button id="minus">-</button>
+            <button id="division">/</button>
+            <button id="multiplication">*</button>
+            <button id="pow">^</button>
         </div>
-        <button class="btn btn-outline-info w-100 mb-2" id="submit">
+        <button>
             Сalculate
         </button>
-        <div class="text-bg-light p-3 text-center">
+        <div>
             <h4>Result:</h4>
-            <p id="result" class="mb-0">49</p>
+            <p id="result">49</p>
         </div>
     </div>
+    <script src="/app.js"></script>
 </body>
 </html>
